Correct text overflow

--- a/client/stylesheets/modules.less
+++ b/client/stylesheets/modules.less
@@ -334,6 +334,8 @@ demo HTML:
       font-size: 22px;
       font-weight: lighter;
       padding: 0 15px 30px 15px;
+      height: 62px;
+      overflow: hidden;
     } // end .module-tile-default-text
   } // end .module-tile-default
 
